--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -67,6 +67,17 @@
               routerLinkActive="active-link" class="link">
               {{this.constants.MENU__VALUE__DASHBOARD}}
             </ion-button>
+            <ion-button id="button-settings" fill="clear" routerLink="/executive/historical" routerDirection="root"
+              routerLinkActive="active-link" class="link">
+              Historical
+            </ion-button>
+            <ion-button id="button-settings" fill="clear" routerLink="/executive/erlist" routerDirection="root"
+              routerLinkActive="active-link" class="link">
+              ER List
+            </ion-button>
+
+
+
             <ion-button id="button-settings" fill="clear" routerLink="/executive/newsfeed" routerDirection="root"
               routerLinkActive="active-link" class="link">
               Newsfeed
@@ -79,7 +90,10 @@
               routerLinkActive="active-link" class="link">
               Patients
             </ion-button>
-
+            <ion-button id="button-settings" fill="clear" routerLink="/executive/caserates" routerDirection="root"
+              routerLinkActive="active-link" class="link">
+              Case Rates
+            </ion-button>
             <ion-button id="button-settings" fill="clear" routerLink="/executive/settings" routerDirection="root"
               routerLinkActive="active-link" class="link">
               {{this.constants.MENU__VALUE__SETTINGS}}
