--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -22,14 +22,14 @@
     </ion-row>
     <ion-row class="">
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class="ion-no-border">
-        <ion-item style="font-size: 13px !important;">
+        <ion-item style="font-size: 13px !important;" *ngIf="!isDesktop">
           <ion-label>Choose Date (MM-DD-YY)</ion-label>
           <ion-datetime displayFormat="MM DD YY" placeholder="Select Date" [(ngModel)]="dateToday"
             (ionChange)="dateChanged()"></ion-datetime>
         </ion-item>
         <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
         <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
-          [(ngModel)]="segmentModel" value="Clean ER">
+          [(ngModel)]="segmentModel" value="Clean ER" *ngIf="!isDesktop">
           <!--ion-segment-button value="ALL">
             All
           </ion-segment-button-->
@@ -42,7 +42,7 @@
 
         </ion-segment>
         <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
-          [(ngModel)]="segmentModel1" value="ALL">
+          [(ngModel)]="segmentModel1" value="ALL" *ngIf="!isDesktop">
           <ion-segment-button value="ALL">
             All
           </ion-segment-button>
@@ -64,9 +64,51 @@
       refreshingSpinner="circles" refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
+
+
+
+
+
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+
+      <ion-col size-md="4" size-lg="3" *ngIf="isDesktop">
+        <ion-card mode="ios" class="pointer">
+          <ion-item style="font-size: 13px !important;">
+            <ion-label>Choose Date (MM-DD-YY)</ion-label>
+            <ion-datetime displayFormat="MM DD YY" placeholder="Select Date" [(ngModel)]="dateToday"
+              (ionChange)="dateChanged()">
+            </ion-datetime>
+          </ion-item>
+          <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
+            [(ngModel)]="segmentModel" value="Clean ER">
+            <!--ion-segment-button value="ALL">
+                              All
+                            </ion-segment-button-->
+            <ion-segment-button value="Clean ER">
+              Clean ER
+            </ion-segment-button>
+            <ion-segment-button value="Covid ER">
+              Covid ER
+            </ion-segment-button>
+
+          </ion-segment>
+          <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
+            [(ngModel)]="segmentModel1" value="ALL">
+            <ion-segment-button value="ALL">
+              All
+            </ion-segment-button>
+            <ion-segment-button value="Cebu">
+              Cebu
+            </ion-segment-button>
+            <ion-segment-button value="Mandaue">
+              Mandaue
+            </ion-segment-button>
+
+          </ion-segment>
+        </ion-card>
+      </ion-col>
+      <ion-col size-md="8" size-lg="6">
         <ng-container>
 
           <div *ngFor="let x of listOfPatients">
@@ -84,11 +126,7 @@
                         <p color="primary"><b>{{x.dob}}</b></p>
                       </ion-text>
                     </h2>
-
                   </ion-item>
-
-
-
                   <ion-row class="ion-no-padding" lines="none" style="padding-top: 1px !important;">
                     <div style="font-size:14px">
                       <span *ngIf="x.site =='Cebu' ">
