Change the following:      - From Dashboard to Daily      - From Others to More...

--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button id="button-in-patients" tab="dashboard">
       <ion-icon name="stats-chart-outline"></ion-icon>
-      <ion-label class="tab-font-family">Dashboard</ion-label>
+      <ion-label class="tab-font-family">Daily</ion-label>
     </ion-tab-button>
 
 
@@ -39,7 +39,7 @@
 
     <ion-tab-button id="button-in-patients">
       <ion-menu-button></ion-menu-button>
-      <ion-label class="tab-font-family">Others</ion-label>
+      <ion-label class="tab-font-family">More...</ion-label>
 
     </ion-tab-button>
 
@@ -65,7 +65,7 @@
           <div class="navbar" class="ion-text-center chh-bg">
             <ion-button id="button-dashboard" fill="clear" routerLink="/executive/dashboard" routerDirection="root"
               routerLinkActive="active-link" class="link">
-              {{this.constants.MENU__VALUE__DASHBOARD}}
+              Daily
             </ion-button>
             <ion-button id="button-settings" fill="clear" routerLink="/executive/historical" routerDirection="root"
               routerLinkActive="active-link" class="link">
