Change dashboard to daily in tabs-dashboard HTML.

--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -2,7 +2,7 @@
   <div>
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="stats-chart-outline"></ion-icon> {{this.constants.MENU__VALUE__DASHBOARD}}
+        <ion-icon name="stats-chart-outline"></ion-icon> Daily
       </ion-title>
       <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
         <ion-button (click)="settings()">&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
