--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -2,7 +2,7 @@
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="person-circle-outline"></ion-icon> Patients
+        <ion-icon name="pulse-outline"></ion-icon> ER Listing (To Date)
       </ion-title>
       <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
         <ion-button (click)="settings()">&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
@@ -23,7 +23,7 @@
     <ion-row class="">
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class="ion-no-border">
         <ion-item style="font-size: 13px !important;" *ngIf="!isDesktop">
-          <ion-label>Choose Date (MM-DD-YY)</ion-label>
+          <ion-label>Select Start Date (MM-DD-YY)</ion-label>
           <ion-datetime displayFormat="MM DD YY" placeholder="Select Date" [(ngModel)]="dateToday"
             (ionChange)="dateChanged()"></ion-datetime>
         </ion-item>
@@ -75,7 +75,7 @@
       <ion-col size-md="4" size-lg="3" *ngIf="isDesktop">
         <ion-card mode="ios" class="pointer">
           <ion-item style="font-size: 13px !important;">
-            <ion-label>Choose Date (MM-DD-YY)</ion-label>
+            <ion-label>Select Start Date (MM-DD-YY)</ion-label>
             <ion-datetime displayFormat="MM DD YY" placeholder="Select Date" [(ngModel)]="dateToday"
               (ionChange)="dateChanged()">
             </ion-datetime>
