Add disposition in ER listing.

--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -140,7 +140,8 @@
 
                       {{x.erType}} : {{x.erDate}} | {{x.erTime}}<br />
 
-                      Impression : {{x.impression}}
+                      Impression : {{x.impression}}<br />
+                      Disposition : {{x.disposition}}
 
 
                     </div>
