--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -112,7 +112,7 @@
         <ng-container>
 
           <div *ngFor="let x of listOfPatients">
-            <ion-card (click)="detail(x.admissionNo,x.attendingDoctorCode)" mode="ios" class="pointer">
+            <ion-card mode="ios" class="pointer">
 
               <ion-item lines="none">
                 <ion-avatar slot="start">
