--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<ion-split-pane *ngIf="role_flag == 'exec' && !isDesktop" contentId="menu-content" when="xs" [disabled]="true"
-    (ionSplitPaneVisible)="onSplitPaneVisible(event)">
+<ion-split-pane *ngIf="role_flag == 'exec' && !isDesktop" contentId="menu-content" when="xs" [disabled]="true">
     <ion-menu contentId="menu-content" menuId="menu-content" side="start" type="overlay">
         <ion-header>
             <ion-toolbar color="mango">
