--- a/src/app/tab-caserates/tab-caserates.page.html
+++ b/src/app/tab-caserates/tab-caserates.page.html
@@ -1,7 +1,6 @@
-
 <ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
-  <div >
-    <ion-toolbar  color="mango" >
+  <div>
+    <ion-toolbar color="mango">
       <ion-title>
         <ion-icon name="briefcase-outline"></ion-icon> Case Rates
       </ion-title>
@@ -9,13 +8,13 @@
   </div>
 </ion-header>
 
-<ion-content > 
-  <ion-grid class="ion-no-padding" >
+<ion-content>
+  <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-lg="4" size-md="2" *ngIf="isDesktop">
 
       </ion-col>
-      <ion-col  size-lg="4"   size-md="6">
+      <ion-col size-lg="4" size-md="6">
         <div *ngIf="ccCase=='first'">
 
 
@@ -33,35 +32,35 @@
               <ion-label>
                 <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
                 <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
-                <ion-badge
-                  ><h3 class="ion-text-wrap">
+                <ion-badge>
+                  <h3 class="ion-text-wrap">
                     <b>PF : {{x.case_pf | number}}</b>
-                  </h3></ion-badge
-                >
+                  </h3>
+                </ion-badge>
               </ion-label>
             </ion-item>
           </ion-list>
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
           <div class="custom-skeleton" *ngIf="ionSkeleton">
             <ion-list>
               <ion-item>
@@ -95,15 +94,12 @@
             </ion-list>
           </div>
           <div *ngIf="ionNoData">
-            <ion-grid >
+            <ion-grid>
               <ion-row>
                 <ion-col size="8" offset="2">
                   <div class="vertical-center">
                     <div class="center">
-                      <img
-                        src="assets/img/no-data-rafiki.png"
-                      
-                      />
+                      <img src="assets/img/no-data-rafiki.png" />
                     </div>
                   </div>
                 </ion-col>
@@ -121,11 +117,11 @@
               <ion-label>asd
                 <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
                 <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
-                <ion-badge
-                  ><h3 class="ion-text-wrap">
+                <ion-badge>
+                  <h3 class="ion-text-wrap">
                     <b>PF : {{x.case_pf | number}}</b>
-                  </h3></ion-badge
-                >
+                  </h3>
+                </ion-badge>
               </ion-label>
             </ion-item>
           </ion-list>
@@ -164,15 +160,12 @@
             </ion-list>
           </div>
           <div *ngIf="ionNoData1">
-            <ion-grid >
+            <ion-grid>
               <ion-row>
                 <ion-col size="8" offset="2">
                   <div class="vertical-center">
                     <div class="center">
-                      <img
-                        src="assets/img/no-data-rafiki.png"
-                      
-                      />
+                      <img src="assets/img/no-data-rafiki.png" />
                     </div>
                   </div>
                 </ion-col>
@@ -190,28 +183,24 @@
               <ion-label>
                 <h2 class="ion-text-wrap">{{x.case_desc}}</h2>
                 <h3 class="ion-text-wrap" slot="end">Case Code : {{x.case_code}}</h3>
-                <ion-badge
-                  ><h3 class="ion-text-wrap">
+                <ion-badge>
+                  <h3 class="ion-text-wrap">
                     <b>PF : {{x.case_pf | number}}</b>
-                  </h3></ion-badge
-                >
+                  </h3>
+                </ion-badge>
               </ion-label>
             </ion-item>
           </ion-list>
         </div>
-        
 
 
-        
+
+
       </ion-col>
       <ion-col size-lg="3" size-md="3" *ngIf="isDesktop">
         <ion-footer class="ion-no-border" color="mango">
-          <ion-segment
-            (ionChange)="segmentChanged($event)"
-            mode="ios"
-            [(ngModel)]="caseRateData.case_class"
-            color="mango"
-          >
+          <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.case_class"
+            color="mango">
             <ion-segment-button value="first">
               <ion-label>1st Case</ion-label>
             </ion-segment-button>
@@ -223,10 +212,9 @@
             <ion-label position="floating">Code : </ion-label>
             <ion-input [(ngModel)]="caseRateData.case_code" id="input-code"></ion-input>
           </ion-item>
-        
+
           <ion-item>
-            <ion-label position="floating" [class.activedescription]="activedescription"
-              >Description :
+            <ion-label position="floating" [class.activedescription]="activedescription">Description :
             </ion-label>
             <ion-input [(ngModel)]="caseRateData.case_desc" id="input-searchdesc"></ion-input>
           </ion-item>
@@ -234,14 +222,8 @@
             <ion-row>
               <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
               <ion-col size-xs="12" size-md="4" size-lg="4">
-                <ion-button
-                  color="mango"
-                  size="default"
-                  expand="block"
-                  shape="round"
-                  (click)="search()"
-                  >Search</ion-button
-                >
+                <ion-button color="mango" size="default" expand="block" shape="round" (click)="search()">Search
+                </ion-button>
               </ion-col>
               <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
             </ion-row>
@@ -256,12 +238,7 @@
 </ion-content>
 
 <ion-footer class="ion-no-border" color="mango" *ngIf="!isDesktop">
-  <ion-segment
-    (ionChange)="segmentChanged($event)"
-    mode="ios"
-    [(ngModel)]="caseRateData.case_class"
-    color="mango"
-  >
+  <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.case_class" color="mango">
     <ion-segment-button value="first">
       <ion-label>1st Case</ion-label>
     </ion-segment-button>
@@ -280,14 +257,15 @@
       </ion-col>
       <ion-col size="6">
         <ion-item style="font-size: 14px;">
-          <ion-label position="floating" [class.activedescription]="activedescription"
-            >Description :
+          <ion-label position="floating" [class.activedescription]="activedescription">Description :
           </ion-label>
           <ion-input [(ngModel)]="caseRateData.case_desc" id="input-searchdesc"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="2">
-        <ion-button size="small" style="margin-top: 20px;"><ion-icon name="search-outline"></ion-icon></ion-button>
+        <ion-button size="small" style="margin-top: 20px;">
+          <ion-icon name="search-outline"></ion-icon>
+        </ion-button>
         <!--ion-grid class="ion-no-padding">
           <ion-row>
 
@@ -330,4 +308,3 @@
     </ion-row>
   </ion-grid-->
 </ion-footer>
-
