Fix case rates data model reference.

--- a/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
+++ b/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
@@ -216,7 +216,7 @@
     <ion-row class="custom-padding">
       <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom ion-no-border ">
         <ion-grid>
-          <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.CaseClass"
+          <ion-segment (ionChange)="segmentChanged($event)" mode="ios" [(ngModel)]="caseRateData.case_class"
             color="mango">
             <ion-segment-button value="first">
               <ion-label>1st Case</ion-label>
