--- a/src/app/chh-web-components/chh-app-caserates/chh-app-caserates.component.html
+++ b/src/app/chh-web-components/chh-app-caserates/chh-app-caserates.component.html
@@ -8,7 +8,7 @@
       color="chh-css-primary2"        
       >
       <ion-icon 
-        name="chevron-back-outline" 
+        name="arrow-back-outline" 
         class="my-icon vcenter">
       </ion-icon>
     </span>
