--- a/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
+++ b/src/app/pages/executuve/tab-caserates/tab-caserates.page.html
@@ -2,7 +2,7 @@
   <div>
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="today-outline"></ion-icon> Case Rates
+        <ion-icon name="file-tray-full-outline"></ion-icon> Case Rates
       </ion-title>
       <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
         <ion-button (click)="settings()">&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
