--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <ion-menu contentId="menu-content" menuId="menu-content" side="start" type="overlay">
         <ion-header>
             <ion-toolbar color="mango">
-                <ion-title>Others</ion-title>
+                <ion-title>More</ion-title>
             </ion-toolbar>
         </ion-header>
         <ion-content>
