--- a/src/app/pages/case-rates/case-rates.page.html
+++ b/src/app/pages/case-rates/case-rates.page.html
@@ -8,7 +8,7 @@
       color="chh-css-primary2"        
       >
       <ion-icon 
-        name="chevron-back-outline" 
+        name="arrow-back-outline" 
         class="my-icon vcenter">
       </ion-icon>
     </span>
