--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -38,8 +38,10 @@
 
 
     <ion-tab-button id="button-in-patients">
-      <ion-menu-button></ion-menu-button>
-      <ion-label class="tab-font-family">More...</ion-label>
+      <ion-menu-button>
+        <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
+      </ion-menu-button>
+      <ion-label class="tab-font-family">More</ion-label>
 
     </ion-tab-button>
 
