--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -35,14 +35,14 @@
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label class="tab-font-family">Patients</ion-label>
     </ion-tab-button-->
+    <!--ion-tab-button id="button-in-patients" (click)="toggleMenu()">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label class="tab-font-family">Patients</ion-label>
+    </ion-tab-button-->
 
-
-    <ion-tab-button id="button-in-patients">
-      <ion-menu-button>
-        <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
-      </ion-menu-button>
+    <ion-tab-button id="button-in-patients" (click)="toggleMenu()">
+      <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
       <ion-label class="tab-font-family">More</ion-label>
-
     </ion-tab-button>
 
 
