added bold on date & time

--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -138,7 +138,7 @@
                         {{this.constants.CHH_NAME__VALUE__MANDAUE}}
                       </span><br />
 
-                      {{x.erType}} : {{x.erDate}} | {{x.erTime}}<br />
+                      {{x.erType}} : <b>{{x.erDate}} {{x.erTime}}</b><br />
                       <div *ngIf="x.impression != null" class="ion-text-wrap">
                         Impression : {{x.impression}}<br />
                       </div>
