--- a/src/app/pages/executuve/components/doctordirectorydetail/doctordirectorydetail.component.html
+++ b/src/app/pages/executuve/components/doctordirectorydetail/doctordirectorydetail.component.html
@@ -70,8 +70,9 @@
 </ion-header>
 
 <ion-content fullscreen="true" slot="fixed">
-  <div class="card">
-    <div>
+  <div class="bg-content">
+    <div class="card">
+
       <div class="header">
         <div class="avatar">
           <img src="../../../../../assets/img/default_female.png" alt="" *ngIf="gender == 'F'">
