working doctors diretory

--- a/src/app/pages/executuve/components/doctordirectorydetail/doctordirectorydetail.component.html
+++ b/src/app/pages/executuve/components/doctordirectorydetail/doctordirectorydetail.component.html
@@ -75,7 +75,7 @@
 
       <div class="header">
         <div class="avatar">
-          <img src="../../../../../assets/img/default_female.png" alt="" *ngIf="gender == 'F'">
+          <img src="../../../../../assets/img/default_female.jpg" alt="" *ngIf="gender == 'F'">
           <img src="../../../../../assets/img/default_male.jpg" alt="" *ngIf="gender == 'M'">
         </div>
       </div>
