--- a/src/app/pages/executuve/tabs/tabs.page.html
+++ b/src/app/pages/executuve/tabs/tabs.page.html
@@ -78,13 +78,16 @@
               ER List
             </ion-button>
 
-
+            <!--ion-button id="button-in-patients" (click)="toggleMenu()">
+              <ion-icon name="ellipsis-horizontal-outline"></ion-icon>
+              <ion-label class="tab-font-family">More</ion-label>
+            </ion-button-->
 
             <ion-button id="button-settings" fill="clear" routerLink="/executive/newsfeed" routerDirection="root"
               routerLinkActive="active-link" class="link">
               Newsfeed
             </ion-button>
-            <ion-button id="button-settings" fill="clear" routerLink="/executive/doctors" routerDirection="root"
+            <!--ion-button id="button-settings" fill="clear" routerLink="/executive/doctors" routerDirection="root"
               routerLinkActive="active-link" class="link">
               Doctors
             </ion-button>
@@ -95,15 +98,19 @@
             <ion-button id="button-settings" fill="clear" routerLink="/executive/caserates" routerDirection="root"
               routerLinkActive="active-link" class="link">
               Case Rates
+            </ion-button-->
+            <ion-button id="button-settings" fill="clear" routerLinkActive="active-link" class="link"
+              (click)="toggleMenu()">
+              More
             </ion-button>
             <ion-button id="button-settings" fill="clear" routerLink="/executive/settings" routerDirection="root"
               routerLinkActive="active-link" class="link">
               {{this.constants.MENU__VALUE__SETTINGS}}
             </ion-button>
-            <ion-button id="button-logout" fill="clear" routerDirection="root" routerLinkActive="active-link"
+            <!--ion-button id="button-logout" fill="clear" routerDirection="root" routerLinkActive="active-link"
               class="link" (click)="logout()">
               {{this.constants.MENU__VALUE__LOG_OUT}}
-            </ion-button>
+            </ion-button-->
           </div>
         </ion-col>
       </ion-row>
