--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,61 +24,34 @@
   <div class="wrapper">
     <ion-grid>
       <ion-row>
-        <ion-col
-          size-lg="4"
-          offset-lg="4 "
-          size-md="4"
-          offset-md="4 "
-          size-sm="6"
-          size="12"
-          class="my-custom-slider"
-        >
+        <ion-col size-lg="4" offset-lg="4 " size-md="6" offset-md="3" size-sm="6" size="12" class="my-custom-slider">
           <ion-card class="form-wrapper">
             <img src="assets/img/orgwide-png.png" />
             <ion-card-content>
-          
-              
-               
-  
+
+
+
+
               <ion-item style="margin-top:-10px">
                 <ion-icon name="mail"></ion-icon>
-                <ion-input
-                  type="text"
-                  placeholder="Username or Email"
-                  id="input-username"
-                  [(ngModel)]="postData.username"
-                >
+                <ion-input type="text" placeholder="Username or Email" id="input-username"
+                  [(ngModel)]="postData.username">
                 </ion-input>
               </ion-item>
               <ion-item>
                 <ion-icon name="lock-closed"></ion-icon>
-                <ion-input
-                  type="password"
-                  placeholder="Password"
-                  id="input-password"
-                  [type]="getType()"
-                  (keyup.enter)="checkInput()"
-                  [(ngModel)]="postData.password"
-                >
+                <ion-input type="password" placeholder="Password" id="input-password" [type]="getType()"
+                  (keyup.enter)="checkInput()" [(ngModel)]="postData.password">
                 </ion-input>
-                <ion-icon
-                  name="eye-off-outline"
-                  [name]="getName()"
-                  item-right
-                  (click)="showPassword()"
-                  class="rectangle"
-                ></ion-icon>
+                <ion-icon name="eye-off-outline" [name]="getName()" item-right (click)="showPassword()"
+                  class="rectangle"></ion-icon>
               </ion-item>
-              <ion-button
-                expand="block"
-                id="btn-confirm"
-                (click)="checkInput()"
-                disabled="{{btnDisable}}"
-                ><div *ngIf="!btnDisable">
+              <ion-button expand="block" id="btn-confirm" (click)="checkInput()" disabled="{{btnDisable}}">
+                <div *ngIf="!btnDisable">
                   {{this.constants.UI_COMPONENT_TEXT__VALUE__LOGIN.toUpperCase()}}
                 </div>
-                <span *ngIf="!btnDisable"></span
-                ><ion-spinner *ngIf="btnDisable"></ion-spinner>
+                <span *ngIf="!btnDisable"></span>
+                <ion-spinner *ngIf="btnDisable"></ion-spinner>
               </ion-button>
 
               <br />
@@ -100,12 +73,12 @@
             <b>
               <a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}
               </a>
-          </b>
+            </b>
           </div>
           <div class="ion-text-center fontSize-12">
             <b>
               <a href="mailto: doki@chonghua.com.ph">doki@chonghua.com.ph</a>
-          </b>
+            </b>
           </div>
         </ion-col>
       </ion-row>
@@ -122,8 +95,6 @@
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-item lines="none" class="fontSize-12">
-    <ion-label class="ion-text-center"
-      >( Made by Chong Hua Hospital for Chong Hua Hospital )</ion-label
-    >
+    <ion-label class="ion-text-center">( Made by Chong Hua Hospital for Chong Hua Hospital )</ion-label>
   </ion-item>
 </ion-footer>
