added filters on directory

--- a/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
+++ b/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
@@ -19,6 +19,20 @@
         <ion-grid>
           <ion-card mode="ios">
             <ion-row>
+              <!--ion-col>
+                <div class="ion-text-center">
+                  <ion-item class="ion-text-center">
+                    <b class="ion-text-center">Total Admissions 2022 : 2304</b>
+                  </ion-item>
+                </div>
+              </ion-col-->
+              <ion-col>
+                <ion-item class="addpadding">
+                  <div class='center-button'>
+                    <b class="ion-text-center">Total Admissions {{this.yearTreandTO}} : {{this.MTATotal}}</b>
+                  </div>
+                </ion-item>
+              </ion-col>
               <ion-col size-xs="12" class="ion-text-center">
                 <ion-item style="font-size: 13px !important;">
                   <ion-label>From</ion-label>
