--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -82,8 +82,8 @@
     <ion-card mode="ios" *ngIf="!isDesktop ">
       <ion-item lines="none">
         <ion-label>&#8369; </ion-label>
-        <ion-input color="danger" type="number" placeholder="0" [(ngModel)]="InsurancePF" (keydown)="isurancePF($event)"
-          (ionChange)="isurancePFchange()">
+        <ion-input color="danger" type="number" inputmode="decimal" placeholder="0" [(ngModel)]="InsurancePF"
+          (keydown)="isurancePF($event)" (ionChange)="isurancePFchange()">
         </ion-input>
       </ion-item>
     </ion-card>
@@ -193,8 +193,8 @@ ______   _   _   _____   _____
     <ion-card mode="ios" *ngIf="!isDesktop  && PhilhealthShowValue">
       <ion-item lines="none">
         <ion-label>&#8369; </ion-label>
-        <ion-input color="danger" type="number" minlength="0" placeholder="0" [(ngModel)]="PhilhealthPF"
-          (ionChange)="philhealthPF()"></ion-input>
+        <ion-input color="danger" type="number" inputmode="decimal" minlength="0" placeholder="0"
+          [(ngModel)]="PhilhealthPF" (ionChange)="philhealthPF()"></ion-input>
       </ion-item>
     </ion-card>
 
@@ -299,8 +299,8 @@ ______                         ______   _   _   _____   _____
     <ion-card mode="ios" *ngIf="!isDesktop">
       <ion-item lines="none">
         <ion-label>&#8369; </ion-label>
-        <ion-input color="danger" type="number" minlength="0" placeholder="0" [(ngModel)]="PersonalPhilhealthPF"
-          (keydown)="personalPhilhealth($event)"></ion-input>
+        <ion-input color="danger" type="number" inputmode="decimal" minlength="0" placeholder="0"
+          [(ngModel)]="PersonalPhilhealthPF" (keydown)="personalPhilhealth($event)"></ion-input>
       </ion-item>
     </ion-card>
 
@@ -565,8 +565,8 @@ ______          _    _
                 <ion-card mode="ios">
                   <ion-item lines="none">
                     <ion-label>&#8369; </ion-label>
-                    <ion-input color="danger" type="number" placeholder="0" [(ngModel)]="InsurancePF"
-                      (keydown)="isurancePF($event)" (ionChange)="isurancePFchange()">
+                    <ion-input color="danger" type="number" inputmode="decimal" placeholder="0"
+                      [(ngModel)]="InsurancePF" (keydown)="isurancePF($event)" (ionChange)="isurancePFchange()">
                     </ion-input>
                   </ion-item>
                 </ion-card>
@@ -671,8 +671,8 @@ ______   _   _   _____   _____
                 <ion-card mode="ios" *ngIf="PhilhealthShowValue">
                   <ion-item lines="none">
                     <ion-label>&#8369; </ion-label>
-                    <ion-input color="danger" type="number" minlength="0" placeholder="0" [(ngModel)]="PhilhealthPF"
-                      (ionChange)="philhealthPF()"></ion-input>
+                    <ion-input color="danger" type="number" inputmode="decimal" minlength="0" placeholder="0"
+                      [(ngModel)]="PhilhealthPF" (ionChange)="philhealthPF()"></ion-input>
                   </ion-item>
                 </ion-card>
                 <ion-card mode="ios" *ngIf="PhilhealthShowVat">
@@ -770,7 +770,7 @@ ______                         ______   _   _   _____   _____
                 <ion-card mode="ios">
                   <ion-item lines="none">
                     <ion-label>&#8369; </ion-label>
-                    <ion-input color="danger" type="number" minlength="0" placeholder="0"
+                    <ion-input color="danger" type="number" inputmode="decimal" minlength="0" placeholder="0"
                       [(ngModel)]="PersonalPhilhealthPF" (keydown)="personalPhilhealth($event)"></ion-input>
                   </ion-item>
                 </ion-card>
