--- a/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
+++ b/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
@@ -29,7 +29,7 @@
               <ion-col>
                 <ion-item class="addpadding">
                   <div class='center-button'>
-                    <b class="ion-text-center">Total Admissions {{this.yearTreandTO}} : {{this.MTATotal}}</b>
+                    <b class="ion-text-center">{{this.yearTreandTO}} Total Admissions YTD: {{this.MTATotal}}</b>
                   </div>
                 </ion-item>
               </ion-col>
